--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c> 
 RewriteEngine On 
-RewriteBase / 
+RewriteBase /notice
 RewriteRule ^(welcome(/index)?|index(\.php)?)/?$ / [L,R=301] 
 RewriteRule ^(.*)/index/?$ $1 [L,R=301] 
 RewriteCond %{REQUEST_FILENAME} !-d 
